clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/at_most_one_mut_borrow/at_most_one_mut_borrow.cbs
// RUN: %clang_cc1 -verify %s

#define NULL ((void*)0)

struct S {
  int a;
};

_Owned struct M {
_Public:
  int a;
};

void use_mut(int *_Borrow p);
void use_immut(const int *_Borrow p);
void use_two_borrow(int *_Borrow p1, int *_Borrow p2);
void useM_mut(M *_Borrow m);
void useM_immut(const M *_Borrow m);
T *_Owned safe_malloc<T>(T value);
void free_owned<T>(T *_Owned p);
void free(void *);

void test1() {
  int local = 42;
  int *_Borrow p = &_Mut local; // expected-note {{first mut borrow occurs here}}
  int *_Borrow q = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
  use_mut(p);
  use_mut(q);
}

void test2() {
  int *_Owned oriPtr = safe_malloc<int>(0);
  int *_Borrow p1 = &_Mut *oriPtr; // expected-note {{first mut borrow occurs here}}
  int *_Borrow p2 = &_Mut *oriPtr; // expected-error {{cannot borrow `*oriPtr` as mutable more than once at a time}}
  use_mut(p1);
  use_mut(p2);
  free_owned<int>(oriPtr);
}

void test3(int *oriPtr) {
  int *_Borrow p1 = &_Mut *oriPtr; // expected-note {{first mut borrow occurs here}}
  int *_Borrow p2 = &_Mut *oriPtr; // expected-error {{cannot borrow `*oriPtr` as mutable more than once at a time}}
  use_mut(p1);
  free(oriPtr);
}

void test4() {
  int local = 42;
  int *_Borrow p = &_Mut local; // expected-note {{first mut borrow occurs here}}
  int *_Borrow p1 = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
  const int *_Borrow p2 = &_Const *p; // expected-note {{immutable borrow occurs here}}
  use_mut(p); // expected-error {{cannot borrow `*p` as mutable because it is also borrowed as immutable}}
  use_mut(p1);
  use_immut(p2);
}

void test5() {
  int local = 42;
  int *_Borrow p = &_Mut local; // expected-note {{mutable borrow occurs here}}
  const int *_Borrow q = &_Const local; // expected-error {{cannot borrow `local` as immutable because it is also borrowed as mutable}}
  use_mut(p);
  use_immut(q);
}

void test6(int *_Borrow p) {
  int local = 5;
  p = &_Mut local;
  const int *_Borrow p1 = &_Const *p; // expected-note {{immutable borrow occurs here}}
  use_mut(p); // expected-error {{cannot borrow `*p` as mutable because it is also borrowed as immutable}}
  use_immut(p1);
}

void test7(int *_Borrow p) {
  int *_Borrow p1 = p; // expected-note {{`*p` is borrowed here}}
                      // expected-note@-1 {{first mut borrow occurs here}}
  use_mut(p); // expected-error {{cannot use `p` because it was mutably borrowed}}
              // expected-error@-1 {{cannot borrow `*p` as mutable more than once at a time}}
  use_mut(p1);
}

void test8() {
  int arr[5];
  int *_Borrow p = &_Mut arr[0]; // expected-note {{first mut borrow occurs here}}
  int *_Borrow q = &_Mut arr[1]; // expected-error {{cannot borrow `arr` as mutable more than once at a time}}
  use_mut(p);
  use_mut(q);
}

void test9() {
  int local = 42;
  int *_Borrow p1 = &_Mut local; // expected-note {{first mut borrow occurs here}}
  int *_Borrow p2 = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
  use_two_borrow(p1, p2);
}

void test10() {
  int local = 5;
  int *_Borrow p1 = &_Mut local;
  const int *_Borrow p2 = &_Const local;
  int *_Owned oriPtr = safe_malloc<int>(0);
  if (local > 0) {
    p1 = &_Mut *oriPtr; // expected-note {{mutable borrow occurs here}}
    p2 = &_Const *oriPtr; // expected-error {{cannot borrow `*oriPtr` as immutable because it is also borrowed as mutable}}
  } else {
    p2 = &_Const *oriPtr; // expected-note {{immutable borrow occurs here}}
    p1 = &_Mut *oriPtr; // expected-error {{cannot borrow `*oriPtr` as mutable because it is also borrowed as immutable}}
  }
  use_mut(p1);
  use_immut(p2);
  free_owned<int>(oriPtr);
}

void test11() {
  int local = 5;
  int *_Borrow p1 = &_Mut local;
  const int *_Borrow p2 = &_Const local;
  int *_Owned oriPtr = safe_malloc<int>(0);
  if (1) {
    p1 = &_Mut *oriPtr; // expected-note {{mutable borrow occurs here}}
    p2 = &_Const *oriPtr; // expected-error {{cannot borrow `*oriPtr` as immutable because it is also borrowed as mutable}}
  } else {
    p1 = &_Mut *oriPtr; // expected-note {{mutable borrow occurs here}}
    p2 = &_Const *oriPtr; // expected-error {{cannot borrow `*oriPtr` as immutable because it is also borrowed as mutable}}
  }
  use_mut(p1);
  use_immut(p2);
  free_owned<int>(oriPtr);
}

void test12() {
  struct S s = { .a = 5 };
  const struct S *_Borrow p1 = &_Const s; // expected-note {{immutable borrow occurs here}}
  struct S *_Borrow p2 = &_Mut s; // expected-error {{cannot borrow `s` as mutable because it is also borrowed as immutable}}
  struct S s1 = *p1;
  struct S s2 = *p2;
}

void test13() {
  int local = 1;
  M m = { .a = local };
  const M *_Borrow p1 = &_Const m; // expected-note {{immutable borrow occurs here}}
  M *_Borrow p2 = &_Mut m; // expected-error {{cannot borrow `m` as mutable because it is also borrowed as immutable}}
  useM_immut(p1);
  useM_mut(p2);
}

void test14(int *a) {
  int *_Borrow p1 = (int *_Borrow)a; // expected-note {{first mut borrow occurs here}}
  int *_Borrow p2 = (int *_Borrow)a; // expected-error {{cannot borrow `*a` as mutable more than once at a time}}
  use_mut(p1);
  use_mut(p2);
}

void test15(int *a) {
  int *_Borrow p1 = (int *_Borrow)NULL;
  int *_Borrow p2 = (int *_Borrow)NULL;
  p1 = (int *_Borrow)a; // expected-note {{first mut borrow occurs here}}
  p2 = (int *_Borrow)a; // expected-error {{cannot borrow `*a` as mutable more than once at a time}}
  use_mut(p1);
  use_mut(p2);
}

void test16() {
  int a = 5;
  int *b = &a;
  int *_Borrow p1 = &_Mut *(&(*(&a)));
  int *_Borrow p2 = &_Mut *(&(*(&a)));
  use_mut(p1);
  use_mut(p2);
  int *_Borrow p3 = (int *_Borrow)(&*b);
  int *_Borrow p4 = (int *_Borrow)(&*b);
  use_mut(p4);
}

void test17(int *a) {
  int *_Borrow p1 = &_Mut *a; // expected-note {{first mut borrow occurs here}}
  int *_Borrow p2 = &_Mut *a; // expected-error {{cannot borrow `*a` as mutable more than once at a time}}
  use_mut(p1);
  use_mut(p2);
}

void test18(int *a) {
  int *_Borrow p1 = (int *_Borrow)NULL;
  int *_Borrow p2 = (int *_Borrow)NULL;
  p1 = &_Mut *a; // expected-note {{first mut borrow occurs here}}
  p2 = &_Mut *a; // expected-error {{cannot borrow `*a` as mutable more than once at a time}}
  use_mut(p1);
  use_mut(p2);
}

void test19() {
  int local = 42;
  int *_Borrow p = &_Mut local,  *_Borrow q = &_Mut local; // expected-error {{cannot borrow `local` as mutable more than once at a time}}
                                                       // expected-note@-1 {{first mut borrow occurs here}}
  use_mut(p);
  use_mut(q);
}

void test20() {
  int local = 42;
  int *_Borrow p = &_Mut local;
  int *_Borrow q = p;
  p = q; // expected-note {{`*q` is borrowed here}}
  int temp = *q; // expected-error {{cannot use `*q` because it was mutably borrowed}}
}

void test21() {
  int local = 42;
  int *_Borrow p = &_Mut local;
  int *_Borrow q = &_Mut *p;
  p = &_Mut *q; // expected-note {{`*q` is borrowed here}}
  int temp = *q; // expected-error {{cannot use `*q` because it was mutably borrowed}}
}

void test22() {
  int local = 42;
  int temp = 2;
  int *_Borrow p1 = &_Mut local;
  int *_Borrow p2 = &_Mut temp;
  p2 = p1; // expected-note {{`*p1` is borrowed here}}
  *p1 = 2; // expected-error {{cannot assign to `*p1` because it is borrowed}}
  temp = *p2;
}

void test23() {
  int local = 42;
  int *_Borrow p = &_Mut local;
  const int *_Borrow q = &_Const *p; // expected-note {{`*p` is borrowed here}}
  *p = 3; // expected-error {{cannot assign to `*p` because it is borrowed}}
  use_immut(q);
}

void test24() {
  int local = 42;
  int *_Borrow p = &_Mut local;
  int *_Borrow q = p; // expected-note {{`*p` is borrowed here}}
  *p = 3; // expected-error {{cannot assign to `*p` because it is borrowed}}
  use_mut(q);
}

void test25() {
  int local = 42;
  int *_Borrow p1 = &_Mut local;
  const int *_Borrow p2 = &_Const *p1; // expected-note {{immutable borrow occurs here}}
  int *_Borrow p3 = p1; // expected-error {{cannot borrow `*p1` as mutable because it is also borrowed as immutable}}
  use_immut(p2);
}